mathjax overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,7 +138,7 @@ li {
  * *******************************************************/
 mjx-container {
   min-width: 0em !important;
-  padding-left: 0;
+  padding: 5px 0 5px 0;
   display: inline-grid;
   overflow-x: auto;
   overflow-y: hidden;
